update post: Day 11 - Docker Fundamentals

--- a/clpo9e6ao000008l48n2s11nk.md
+++ b/clpo9e6ao000008l48n2s11nk.md
@@ -1,8 +1,8 @@
 ---
-title: "Day 11 - Docker Fundamentals for DevOps Engineers."
+title: "Day 11 - Docker Fundamentals"
 datePublished: Sat Dec 02 2023 16:19:30 GMT+0000 (Coordinated Universal Time)
 cuid: clpo9e6ao000008l48n2s11nk
-slug: day-11-docker-fundamentals-for-devops-engineers
+slug: day-11-docker-fundamentals
 cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1701529896409/a9b7d1a0-37bb-45ea-8e11-56a41431cb12.png
 tags: docker, devops, dockerhub, 90daysofdevops, shubhamlondhe, trainwithshubham, tws
 
