update post: Day 19 - Jenkins Webhook and Declarative Pipeline

--- a/clqgi96h4000108k30h6sa4ju.md
+++ b/clqgi96h4000108k30h6sa4ju.md
@@ -8,7 +8,7 @@ tags: devops, webhooks, jenkins, cicd-cjy1vtdk2005kjjs17n8couc3, 90daysofdevops,
 
 ---
 
-# **<mark>Webhook</mark>**:
+# **<mark>Webhook</mark>**
 
 A webhook is an automated communication mechanism that sends real-time data from one application/server to another application/server when a specific event occurs.
 
@@ -53,14 +53,14 @@ A webhook is an automated communication mechanism that sends real-time data from
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703237618608/564dc971-7992-4373-99e7-5c6adaf89d89.png align="center")
 
-## **<mark>Blue Ocean 1.27.9</mark> (Jenkins Plugins):**
+## **<mark>Blue Ocean 1.27.9</mark> (Jenkins Plugins)**
 
 * **Dashboard -&gt; Manage Jenkins -&gt; Plugins -&gt; Available Plugins -&gt; Blue Ocean 1.27.9 (Blue Ocean is jenkins redesigned, user friendly interface for easier pipeline creation and visualization)**
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703237759666/1d7dd698-512c-46ff-a25e-adf7c40668b4.png align="center")
 
-# **<mark>Declarative Pipelines</mark>:**
+# **<mark>Declarative Pipelines</mark>**
 
 The declarative pipeline in Jenkins is a simplified and structured way to define continuous integration and delivery (CI/CD) pipelines using a more human-readable syntax.
 
@@ -90,7 +90,7 @@ The declarative pipeline in Jenkins is a simplified and structured way to define
 * **Go to Pipeline -&gt; Pipeline script -&gt; Script (We need to write Pipeline script here)**
     
 
-### **<mark>Groovy</mark>:-**
+### **<mark>Groovy</mark>**
 
 Groovy is a versatile programming language that runs on the Java Virtual Machine, known for its simplicity and compatibility with Java while offering powerful scripting capabilities.
 
@@ -127,12 +127,12 @@ pipeline {
 
 * **Save it**
     
-* **Build Now** \--&gt; It gets failed (Missing required section "agent" @ line 1, column 1)
+* **Build Now** --&gt; It gets failed (Missing required section "agent" @ line 1, column 1)
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703238381028/56e22c5e-3b80-4db3-a387-628ba9f5aad2.png align="center")
 
-* **agent any** \--&gt; The "agent any" directive in Jenkins allows a pipeline to run on any available agent/node in the Jenkins environment, providing flexibility in job execution across various agents.
+* **agent any** --&gt; The "agent any" directive in Jenkins allows a pipeline to run on any available agent/node in the Jenkins environment, providing flexibility in job execution across various agents.
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703238482715/67a04e22-5b17-46e0-8308-10ed3fdba701.png align="center")
@@ -146,7 +146,7 @@ pipeline {
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703238519494/fd0fcefb-b24d-4ac4-8e01-6fd89fca4fe0.png align="center")
 
-* **git url: "**[**https://github.com/mayurbarange12/node-todo-cicd.git**](https://github.com/mayurbarange12/node-todo-cicd.git)**", branch: "master"** \--&gt; Specifies the URL and Branch
+* **git url: "**[**https://github.com/mayurbarange12/node-todo-cicd.git**](https://github.com/mayurbarange12/node-todo-cicd.git)**", branch: "master"** --&gt; Specifies the URL and Branch
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703238585967/0b2f5fe9-ed7a-4779-ae33-5bdd1c7eb990.png align="center")
@@ -160,7 +160,7 @@ pipeline {
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703238618225/ef52449e-37a9-463e-85d4-d1c22113acc9.png align="center")
 
-* **cd /var/lib/jenkins/workspace/node-todo-cicd** \--&gt; GitHub Project cloned in my EC2 Server.
+* **cd /var/lib/jenkins/workspace/node-todo-cicd** --&gt; GitHub Project cloned in my EC2 Server.
     
 * **ls**
     
@@ -315,7 +315,7 @@ pipeline {
 
 * **Save It**
     
-* **Build Now** \--&gt; Image has ben **pushed** to **DockerHub.**
+* **Build Now** --&gt; Image has ben **pushed** to **DockerHub.**
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703240085479/e808e2b3-f42a-4c5d-92fb-dae507f75946.png align="center")
