update post: Day 19 - Jenkins Webhook and Declarative Pipeline

--- a/clqgi96h4000108k30h6sa4ju.md
+++ b/clqgi96h4000108k30h6sa4ju.md
@@ -66,7 +66,7 @@ The declarative pipeline in Jenkins is a simplified and structured way to define
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1703237870914/2fcbe214-544d-42a6-bc1b-b87b1312b891.png align="center")
 
-## <mark>Project</mark>:- node-todo-cicd
+## <mark>Project</mark>: node-todo-cicd
 
 * **Click on "Create a job" or "New Item"**
     
