update post: Day 11 - Docker Fundamentals

--- a/clpo9e6ao000008l48n2s11nk.md
+++ b/clpo9e6ao000008l48n2s11nk.md
@@ -8,9 +8,8 @@ tags: docker, devops, dockerhub, 90daysofdevops, shubhamlondhe, trainwithshubham
 
 ---
 
-## **What is Docker?**🐳
+## What is Docker?🐳
 
-  
 🐳Docker is a platform that allows developers to build, ship, and run applications in containers.🚀Containers are lightweight, standalone, and executable packages that contain everything needed to run the software, including the code, runtime, system tools, libraries, and settings. Docker provides a way to📦💻 package and distribute applications along with their dependencies in a consistent and portable manner, regardless of the environment they are run in🌐✨.
 
 ## Basics of Docker
@@ -62,11 +61,11 @@ tags: docker, devops, dockerhub, 90daysofdevops, shubhamlondhe, trainwithshubham
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1701532724180/44973cd1-9b6f-420d-85b0-8fa5e9c21fdb.png align="center")
 
-### **Virtualization:-**
+### **Virtualization**
 
 Virtualization in Docker involves running multiple isolated containers on a single host operating system, allowing applications to be abstracted from the underlying infrastructure, ensuring efficient resource utilization and providing consistency across different environments.
 
-### **Hypervisor:-**
+### **Hypervisor**
 
 A hypervisor is a software that enables the creation and management of virtual machines, allowing multiple operating systems to run on a single physical machine.
 
@@ -76,11 +75,11 @@ A hypervisor is a software that enables the creation and management of virtual m
 
 Docker is lightweight due to its use of containerization, sharing the host OS kernel among containers, and employing a layered file system, resulting in minimal duplication and efficient resource utilization.
 
-### **Kernel:-**
+### **Kernel**
 
 The kernel is the core component of an operating system that manages system resources and facilitates communication between hardware and software.
 
-### **Docker Engine**:-
+### **Docker Engine**
 
 The Docker Engine is the core component of Docker that manages containers, handling container runtime, image management, networking, and interfacing with the Docker daemon to execute container-related commands.
 
@@ -97,14 +96,14 @@ The Docker engine takes two things:-
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1701533645520/0df9903f-daad-4487-b148-f3245cd16b26.png align="center")
 
-### **Dockerd:-**
+### **Dockerd**
 
 Dockerd is the Docker daemon responsible for managing Docker containers, handling container runtime, image management, networking, and interfacing with the Docker Engine API to execute container-related commands and operations.
 
-### **Containerd**:-
+### **Containerd**
 
 Containerd is an industry-standard core container runtime, providing an essential layer between the operating system and container engines, managing the container lifecycle and providing a consistent interface for various container systems like Docker and Kubernetes.
 
-### **Docker CLI:-**
+### **Docker CLI**
 
 Docker CLI (Command Line Interface) is a tool that enables users to interact with Docker, issuing commands to manage containers, images, networks, volumes, and other Docker-related functionalities through a command-line interface. It serves as the primary interface for Docker operations and configurations.
