update post: Day 6 - Shell Scripting

--- a/clpa3pxd9000108jx78t375e4.md
+++ b/clpa3pxd9000108jx78t375e4.md
@@ -8,11 +8,11 @@ tags: linux, shell-script, 90daysofdevops, trainwithshubham, tws
 
 ---
 
-**Backup:-**
+# **Backup**
 
 Backup in Linux involves duplicating and storing data from files, directories, or systems onto separate storage media or locations to safeguard against data loss, system failures, or unforeseen events, ensuring data preservation and recovery capability.
 
-**How to take a backup with a timestamp in Linux?**
+## **How to take a backup with a timestamp in Linux?**
 
 * `mkdir scripts`
     
@@ -70,7 +70,7 @@ final_file=$tgt_dir/scripts-backup-$current_timestamp.tgz
 echo $final_file
 ```
 
-* ***Format*** *\--&gt;* ***/home/ubuntu/backups/scripts backup-timestamp.tgz***
+* ***Format*** *\--&gt;* `/home/ubuntu/backups/scripts backup-timestamp.tgz`
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1700498829273/1b439a28-86d6-44fe-93aa-a9963b711f65.png align="center")
@@ -103,7 +103,7 @@ tar = To compress file
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1700464752017/5f471daf-3c98-49f9-ba9c-35c799b807dd.png align="center")
 
-**Functions:-**
+# **Functions**
 
 In Linux, a function is a named block of code within a script or shell session that performs a specific task or set of tasks, enhancing script modularity and reusability by allowing repeated execution without rewriting the code.
 
@@ -130,7 +130,7 @@ echo "Backup Completed…"
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1700465347235/7db71843-06e6-45f5-9b10-98a21dbab8dd.png align="center")
 
-**Crontab:-**
+# **Crontab**
 
 "Crontab" is a command in Linux used to schedule tasks or commands to run periodically at fixed intervals or specific times, enabling automated execution of repetitive actions without user intervention.
 
@@ -157,18 +157,18 @@ echo "Backup Completed…"
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1700496753358/6bc59419-060d-4dd0-a467-a8733fb334ab.png align="center")
 
-**ACL :- (Access Control List)**
+# **ACL : (Access Control List)**
 
 * Access Control List(ACL) provides an additional, more flexible permission mechanism for file system.
     
 * Access control list is a service which is used for providing special permission to specific users and groups to particular directories and file.
     
 
-**Use of ACL -**
+## **Use of ACL**
 
 Think of a scenario in which a particular user is not a member of group created by you but still you want to give some read or write access, how you can do it without making user a member of group, here comes in picture Access Control Lists, ACL helps us to do this trick.
 
-**How to check ACL Permission?**
+## **How to check ACL Permission?**
 
 * `vim testme.sh`
     
@@ -185,7 +185,7 @@ Think of a scenario in which a particular user is not a member of group created 
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1700498234682/97694095-0e02-4c9f-84bc-40585d5b3794.png align="center")
 
-**How to set ACL Permission to User?**
+## **How to set ACL Permission to User?**
 
 * `setfacl -m u:ubuntu:rwx testme.sh`
     
