update post: Day 32 - AWS Autoscaling, Elastic Load Balancer(ELB) and Web Application Firewall(WAF)

--- a/clrfm5dcv000009l87vrf2273.md
+++ b/clrfm5dcv000009l87vrf2273.md
@@ -27,7 +27,7 @@ There are generally **two** types of **load balancers**:
 2. **Network Load Balancer (NLB):** Operates at the transport layer (Layer 4), directing traffic at the connection level, making it well-suited for handling TCP/UDP traffic efficiently.
     
 
-* Bottom left you will see **Auto Scaling Group** option.
+* Bottom left you will see **Auto Scaling Groups** option.
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1705333316900/54f847cd-c02c-4736-b274-3c964f550ce5.png align="center")
@@ -192,14 +192,14 @@ AWS WAF (Web Application Firewall) protects against web exploits through customi
 
 **Step 2: Add rules and rule group**
 
-*  Click on **Add rules --&gt; Add managed rule groups**
+* Click on **Add rules --&gt; Add managed rule groups**
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1705363585732/121aee85-def5-489c-8a49-d2b0c2c39298.png align="center")
 
 * **AWS managed rule groups**
     
-* **Bot Control** \--&gt; **Add to web ACL**
+* **Bot Control** --&gt; **Add to web ACL**
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1705363598363/22a0dcb8-06d1-49a3-8ee6-efca530b3f78.png align="center")
@@ -210,7 +210,7 @@ AWS WAF (Web Application Firewall) protects against web exploits through customi
     
 * Bot Control inspection level: **Common**
     
-* Select **inspect all web requests** 
+* Select **inspect all web requests**
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1705363702171/fb0e2ef4-01c3-45bd-965e-0aa954f1f757.png align="center")
@@ -250,7 +250,7 @@ AWS WAF (Web Application Firewall) protects against web exploits through customi
 
 * Then go to **AWS CLI** in Browser and enter below command:
     
-* `sudo apt-get install stress` **--&gt;** This command installs the "stress" tool on a Debian-based Linux system using the Advanced Package Tool (APT), allowing users to simulate high CPU, memory, and disk stress for testing system resilience. (**In short It will increase the traffic in CPU Utilization**)
+* `sudo apt-get install stress` **\--&gt;** This command installs the "stress" tool on a Debian-based Linux system using the Advanced Package Tool (APT), allowing users to simulate high CPU, memory, and disk stress for testing system resilience. (**In short It will increase the traffic in CPU Utilization**)
     
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1705364196539/7bed7d6c-76fe-4c36-8ccb-20f4625b275f.png align="center")
