update post: Day 32 - AWS Autoscaling, Elastic Load Balancer(ELB) and Web Application Firewall(WAF)

--- a/clrfm5dcv000009l87vrf2273.md
+++ b/clrfm5dcv000009l87vrf2273.md
@@ -12,17 +12,17 @@ tags: trainwithshubham-tws-devops-devopscommunity-shubhamlondhe-automation-awswi
 
 Autoscaling in AWS dynamically adjusts the number of EC2 instances based on predefined conditions, optimizing resource utilization and ensuring application availability.
 
-## **Autoscaling Group**
+## **<mark>Autoscaling Group</mark>**
 
 An Autoscaling Group in AWS automatically adjusts the number of instances in a specified group to maintain application availability and ensure a defined capacity.
 
-## **Load Balancer**
+## **<mark>Load Balancer</mark>**
 
 A Load Balancer distributes incoming network traffic across multiple servers to ensure efficient resource utilization and enhance the availability and reliability of a web application.
 
 There are generally **two** types of **load balancers**:
 
-1. **Aplication Load Balancer (ALB):** Operates at the application layer (Layer 7) of the OSI model, providing advanced routing features and supporting content-based routing.
+1. **Application Load Balancer (ALB):** Operates at the application layer (Layer 7) of the OSI model, providing advanced routing features and supporting content-based routing.
     
 2. **Network Load Balancer (NLB):** Operates at the transport layer (Layer 4), directing traffic at the connection level, making it well-suited for handling TCP/UDP traffic efficiently.
     
@@ -152,7 +152,7 @@ There are generally **two** types of **load balancers**:
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1705357621254/d6d9af41-d9a6-4915-a11b-9cd426b5744b.png align="center")
 
-# **Web Application Firewall(WAF)**
+# **<mark>Web Application Firewall</mark>(WAF)**
 
 AWS WAF (Web Application Firewall) protects against web exploits through customizable rules, while AWS Shield provides managed DDoS protection, collectively ensuring the security and availability of web applications on the AWS cloud.
 
