update post: Day 32 - AWS Autoscaling, Elastic Load Balancer(ELB) and Web Application Firewall(WAF)

--- a/clrfm5dcv000009l87vrf2273.md
+++ b/clrfm5dcv000009l87vrf2273.md
@@ -260,4 +260,4 @@ AWS WAF (Web Application Firewall) protects against web exploits through customi
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1705364360397/cd0bafda-f97d-4e58-a713-0214cfe2132e.png align="center")
 
-* If we delete "**zero-to-hero-server**" instance then also by default 1 instance "**zero-to-hero-server**" will be **up** beacause that is our **desired state** that we already mentioned.
+* If we delete "**zero-to-hero-server**" instance then also by default 1 instance "**zero-to-hero-server**" will be **up** because that is our **desired state** that we already mentioned.
